force-app/main/default/objects/Lit_Fiber__c/Lit_Fiber__c.object-meta.xml
<CustomObject>
    <label>Lit Fiber</label>
    <nameField>
        <label>Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lit Fibers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>