force-app/main/default/objects/Lit_Fiber__c/fields/Add_Battery_Capacity_A__c.field-meta.xml
<CustomField>
    <fullName>Add_Battery_Capacity_A__c</fullName>
    <label>Add Battery Capacity (A)</label>
    <type>Date</type>
</CustomField>