force-app/main/default/objects/Lit_Fiber__c/fields/Add_Battery_Capacity_F__c.field-meta.xml
<CustomField>
    <fullName>Add_Battery_Capacity_F__c</fullName>
    <label>Add Battery Capacity (F)</label>
    <type>Date</type>
</CustomField>