force-app/main/default/objects/Lit_Fiber__c/fields/Add_Fiber_Management_A__c.field-meta.xml
<CustomField>
    <fullName>Add_Fiber_Management_A__c</fullName>
    <label>Add Fiber Management (A)</label>
    <type>Date</type>
</CustomField>