force-app/main/default/objects/Lit_Fiber__c/fields/Add_Fiber_Management_F__c.field-meta.xml
<CustomField>
    <fullName>Add_Fiber_Management_F__c</fullName>
    <label>Add Fiber Management (F)</label>
    <type>Date</type>
</CustomField>