force-app/main/default/objects/Lit_Fiber__c/fields/Add_Install_Rack_A__c.field-meta.xml
<CustomField>
    <fullName>Add_Install_Rack_A__c</fullName>
    <label>Add/Install Rack (A)</label>
    <type>Date</type>
</CustomField>