force-app/main/default/objects/Lit_Fiber__c/fields/Add_Install_Rack_F__c.field-meta.xml
<CustomField>
    <fullName>Add_Install_Rack_F__c</fullName>
    <label>Add/Install Rack (F)</label>
    <type>Date</type>
</CustomField>