force-app/main/default/objects/Lit_Fiber__c/fields/Add_Power_Drop_to_Customer_A__c.field-meta.xml
<CustomField>
    <fullName>Add_Power_Drop_to_Customer_A__c</fullName>
    <label>Add Power Drop to Customer (A)</label>
    <type>Date</type>
</CustomField>