force-app/main/default/objects/Lit_Fiber__c/fields/Add_Security_to_Tower_A__c.field-meta.xml
<CustomField>
    <fullName>Add_Security_to_Tower_A__c</fullName>
    <label>Add Security to Tower (A)</label>
    <type>Date</type>
</CustomField>