force-app/main/default/objects/Lit_Fiber__c/fields/Add_Security_to_Tower_F__c.field-meta.xml
<CustomField>
    <fullName>Add_Security_to_Tower_F__c</fullName>
    <label>Add Security to Tower (F)</label>
    <type>Date</type>
</CustomField>