force-app/main/default/objects/Lit_Fiber__c/fields/Circuit_Design_A__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Design_A__c</fullName>
    <label>Circuit Design (A)</label>
    <type>Date</type>
</CustomField>