force-app/main/default/objects/Lit_Fiber__c/fields/Circuit_Design_F__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Design_F__c</fullName>
    <label>Circuit Design (F)</label>
    <type>Date</type>
</CustomField>