force-app/main/default/objects/Lit_Fiber__c/fields/CLR_has_been_validated_A__c.field-meta.xml
<CustomField>
    <fullName>CLR_has_been_validated_A__c</fullName>
    <label>CLR has been validated (A)</label>
    <type>Date</type>
</CustomField>