force-app/main/default/objects/Lit_Fiber__c/fields/CLR_has_been_validated_F__c.field-meta.xml
<CustomField>
    <fullName>CLR_has_been_validated_F__c</fullName>
    <label>CLR has been validated (F)</label>
    <type>Date</type>
</CustomField>