force-app/main/default/objects/Lit_Fiber__c/fields/CLR_Redline_A__c.field-meta.xml
<CustomField>
    <fullName>CLR_Redline_A__c</fullName>
    <label>CLR Redline (A)</label>
    <type>Date</type>
</CustomField>