force-app/main/default/objects/Lit_Fiber__c/fields/CLR_Redline_F__c.field-meta.xml
<CustomField>
    <fullName>CLR_Redline_F__c</fullName>
    <label>CLR Redline (F)</label>
    <type>Date</type>
</CustomField>