force-app/main/default/objects/Lit_Fiber__c/fields/Conduct_Customer_Kick_off_Call_F__c.field-meta.xml
<CustomField>
    <fullName>Conduct_Customer_Kick_off_Call_F__c</fullName>
    <label>Conduct Customer Kick off Call (F)</label>
    <type>Date</type>
</CustomField>