force-app/main/default/objects/Lit_Fiber__c/fields/Conduct_Internal_Kick_off_Call_A__c.field-meta.xml
<CustomField>
    <fullName>Conduct_Internal_Kick_off_Call_A__c</fullName>
    <label>Conduct Internal Kick off Call (A)</label>
    <type>Date</type>
</CustomField>