force-app/main/default/objects/Lit_Fiber__c/fields/Create_BOM_A__c.field-meta.xml
<CustomField>
    <fullName>Create_BOM_A__c</fullName>
    <label>Create BOM (A)</label>
    <type>Date</type>
</CustomField>