force-app/main/default/objects/Lit_Fiber__c/fields/Create_BOM_F__c.field-meta.xml
<CustomField>
    <fullName>Create_BOM_F__c</fullName>
    <label>Create BOM (F)</label>
    <type>Date</type>
</CustomField>