force-app/main/default/objects/Lit_Fiber__c/fields/Equipment_added_in_monitoring_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_added_in_monitoring_F__c</fullName>
    <label>Equipment added in monitoring (F)</label>
    <type>Date</type>
</CustomField>