force-app/main/default/objects/Lit_Fiber__c/fields/Equipment_Ordered_A__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ordered_A__c</fullName>
    <label>Equipment Ordered (A)</label>
    <type>Date</type>
</CustomField>