force-app/main/default/objects/Lit_Fiber__c/fields/Equipment_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ordered_F__c</fullName>
    <label>Equipment Ordered (F)</label>
    <type>Date</type>
</CustomField>