force-app/main/default/objects/Lit_Fiber__c/fields/Equipment_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Received_A__c</fullName>
    <label>Equipment Received (A)</label>
    <type>Date</type>
</CustomField>