force-app/main/default/objects/Lit_Fiber__c/fields/Equipment_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Received_F__c</fullName>
    <label>Equipment Received (F)</label>
    <type>Date</type>
</CustomField>