force-app/main/default/objects/Lit_Fiber__c/fields/Installation_Test_Turnup_A__c.field-meta.xml
<CustomField>
    <fullName>Installation_Test_Turnup_A__c</fullName>
    <label>Installation/Test &amp; Turnup (A)</label>
    <type>Date</type>
</CustomField>