force-app/main/default/objects/Lit_Fiber__c/fields/Installation_Test_Turnup_F__c.field-meta.xml
<CustomField>
    <fullName>Installation_Test_Turnup_F__c</fullName>
    <label>Installation/Test &amp; Turnup (F)</label>
    <type>Date</type>
</CustomField>