force-app/main/default/objects/Lit_Fiber__c/fields/Internal_Audit_A__c.field-meta.xml
<CustomField>
    <fullName>Internal_Audit_A__c</fullName>
    <label>Internal Audit (A)</label>
    <type>Date</type>
</CustomField>