force-app/main/default/objects/Lit_Fiber__c/fields/Internal_Audit_F__c.field-meta.xml
<CustomField>
    <fullName>Internal_Audit_F__c</fullName>
    <label>Internal Audit (F)</label>
    <type>Date</type>
</CustomField>