force-app/main/default/objects/Lit_Fiber__c/fields/IPs_Provided_A__c.field-meta.xml
<CustomField>
    <fullName>IPs_Provided_A__c</fullName>
    <label>IPs Provided (A)</label>
    <type>Date</type>
</CustomField>