force-app/main/default/objects/Lit_Fiber__c/fields/IPs_Provided_F__c.field-meta.xml
<CustomField>
    <fullName>IPs_Provided_F__c</fullName>
    <label>IPs Provided (F)</label>
    <type>Date</type>
</CustomField>