force-app/main/default/objects/Lit_Fiber__c/fields/ISP_Site_Survey_A__c.field-meta.xml
<CustomField>
    <fullName>ISP_Site_Survey_A__c</fullName>
    <label>ISP Site Survey (A)</label>
    <type>Date</type>
</CustomField>