force-app/main/default/objects/Lit_Fiber__c/fields/ISP_Site_Survey_F__c.field-meta.xml
<CustomField>
    <fullName>ISP_Site_Survey_F__c</fullName>
    <label>ISP Site Survey (F)</label>
    <type>Date</type>
</CustomField>