force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Construction_Complete_F__c.field-meta.xml
<CustomField>
    <fullName>OSP_Construction_Complete_F__c</fullName>
    <label>OSP Construction Complete (F)</label>
    <type>Date</type>
</CustomField>