force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Construction_Start_A__c.field-meta.xml
<CustomField>
    <fullName>OSP_Construction_Start_A__c</fullName>
    <label>OSP Construction Start (A)</label>
    <type>Date</type>
</CustomField>