force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Construction_Start_F__c.field-meta.xml
<CustomField>
    <fullName>OSP_Construction_Start_F__c</fullName>
    <label>OSP Construction Start (F)</label>
    <type>Date</type>
</CustomField>