force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Engineer_PO_Issued_A__c.field-meta.xml
<CustomField>
    <fullName>OSP_Engineer_PO_Issued_A__c</fullName>
    <label>OSP Engineer PO Issued (A)</label>
    <type>Date</type>
</CustomField>