force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Engineering_A__c.field-meta.xml
<CustomField>
    <fullName>OSP_Engineering_A__c</fullName>
    <label>OSP Engineering (A)</label>
    <type>Date</type>
</CustomField>