force-app/main/default/objects/Lit_Fiber__c/fields/OSP_Engineering_F__c.field-meta.xml
<CustomField>
    <fullName>OSP_Engineering_F__c</fullName>
    <label>OSP Engineering (F)</label>
    <type>Date</type>
</CustomField>