force-app/main/default/objects/Lit_Fiber__c/fields/Pre_Provisioning_A__c.field-meta.xml
<CustomField>
    <fullName>Pre_Provisioning_A__c</fullName>
    <label>Pre-Provisioning (A)</label>
    <type>Date</type>
</CustomField>