force-app/main/default/objects/Lit_Fiber__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>sitetracker__Project__c</referenceTo>
    <relationshipLabel>Lit Fibers</relationshipLabel>
    <relationshipName>Lit_Fibers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>