force-app/main/default/objects/Lit_Fiber__c/fields/Send_Order_Acknowledgement_A__c.field-meta.xml
<CustomField>
    <fullName>Send_Order_Acknowledgement_A__c</fullName>
    <label>Send Order Acknowledgement (A)</label>
    <type>Date</type>
</CustomField>