force-app/main/default/objects/Lit_Fiber__c/fields/Shipping_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Confirmation_Number__c</fullName>
    <label>Shipping Confirmation Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>