force-app/main/default/objects/Lit_Fiber__c/fields/Splicing_A__c.field-meta.xml
<CustomField>
    <fullName>Splicing_A__c</fullName>
    <label>Splicing (A)</label>
    <type>Date</type>
</CustomField>