force-app/main/default/objects/Lit_Fiber__c/fields/Splicing_F__c.field-meta.xml
<CustomField>
    <fullName>Splicing_F__c</fullName>
    <label>Splicing (F)</label>
    <type>Date</type>
</CustomField>