force-app/main/default/objects/Lit_Fiber__c/fields/Testing_A__c.field-meta.xml
<CustomField>
    <fullName>Testing_A__c</fullName>
    <label>Testing (A)</label>
    <type>Date</type>
</CustomField>