force-app/main/default/objects/Lit_Fiber__c/fields/Testing_F__c.field-meta.xml
<CustomField>
    <fullName>Testing_F__c</fullName>
    <label>Testing (F)</label>
    <type>Date</type>
</CustomField>